--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,45 +9,62 @@
 
 </head>
 <body>
-  <div class="login-container">
-    <h1>ACME University</h1>
-    <form id="loginForm">
-      <label for="email">Username</label>
-      <input type="text" id="email" placeholder="Enter your email or username" required>
-      <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter your password" required>
+    <div class="login-container">
+        <h1>ACME University</h1>
+        <form id="loginForm">
+            <label for="email">Username or Email</label>
+            <input type="text" id="email" placeholder="Enter your email or username" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Enter your password" required>
 
-      <button type="submit">Sign in</button>
-      <p id="error" class="error"></p>
-    </form>
-    <p>
-  Don't have an account? 
-  <a href="#" id="showRegister">Register here</a>
-</p>
+            <button type="submit">Sign in</button>
+            <p id="error" class="error"></p>
+        </form>
 
-<!-- 注册表单（默认隐藏） -->
-<div id="registerBox" style="display:none;">
-  <h2>Create Account</h2>
-  <label for="regName">Name</label>
-  <input type="text" id="regName" required>
+        <p>
+            Forgot password or need to reset it?
+            <a href="#" id="showReset">Reset Password</a>
+        </p>
+        <p>
+            Don't have an account?
+            <a href="#" id="showRegister">Register here</a>
+        </p>
 
-  <label for="regEmail">Email</label>
-  <input type="email" id="regEmail" required>
 
-  <label for="regPassword">Password</label>
-  <input type="password" id="regPassword" required>
+        <!-- hidden registration section -->
+        <div id="registerBox" style="display:none;">
+            <h2>Create Account</h2>
+            <label for="regName">Full Name</label>
+            <input type="text" id="regName" required>
 
-  <label for="regRole">Role</label>
-  <select id="regRole">
-    <option value="student">Student</option>
-    <option value="teacher">Teacher</option>
-  </select>
+            <label for="regEmail">Email</label>
+            <input type="email" id="regEmail" required>
 
-  <button id="registerBtn">Register</button>
-  <p id="regMsg" class="error"></p>
-</div>
+            <label for="regPassword">Password</label>
+            <input type="password" id="regPassword" required>
 
-  </div>
+            <label for="regRole">Role</label>
+            <select id="regRole">
+                <option value="student">Student</option>
+                <option value="teacher">Teacher</option>
+            </select>
+
+            <button id="registerBtn">Register</button>
+            <p id="regMsg" class="error"></p>
+        </div>
+
+        <!-- Password Reset Form (hidden by default) -->
+        <div id="resetBox" style="display:none;">
+            <h2>Reset Password</h2>
+            <label for="resetEmail">Email</label>
+            <input type="email" id="resetEmail" placeholder="Enter your email" required>
+
+            <button id="resetBtn">Send Recovery Email</button>
+            <p id="resetMsg" class="error"></p>
+        </div>
+
+
+    </div>
 
   <script src="../src/js/main.js"></script>
 </body>
